reverting inputStream changes