@@ -17,8 +17,6 @@ import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
 import org.springframework.util.ObjectUtils;
 
-import javax.net.ssl.HttpsURLConnection;
-import javax.net.ssl.SSLContext;
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
@@ -113,16 +111,7 @@ public class DocUploadUtils {
             log.info("lendingKfs is non empty");
             if (!ObjectUtils.isEmpty(signedSanctionUrl)) {
                 String sanctionLoanAgreementFileName = ESIGNED_SANCTION_LOAN_AGREEMENT_S3_KEY_PREFIX + applicationId;
-
-                URL url = new URL(signedSanctionUrl);
-                HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
-                connection.setConnectTimeout(20000); // 10 seconds
-                connection.setReadTimeout(30000);    // 20 seconds
-                connection.setSSLSocketFactory(SSLContext.getInstance("TLSv1.2").getSocketFactory());
-                connection.setHostnameVerifier((hostname, session) -> true);
-                InputStream inputStream = connection.getInputStream();
-
-              //  InputStream inputStream = URI.create(signedSanctionUrl).toURL().openConnection().getInputStream();
+                InputStream inputStream = URI.create(signedSanctionUrl).toURL().openConnection().getInputStream();
                 log.info("inputStream: {}",inputStream);
                 s3BucketHandler.uploadToS3PdfBucket(inputStream, sanctionLoanAgreementFileName, bucket);
                 String sanctionUrl = s3BucketHandler.getPreSignedPublicURL(sanctionLoanAgreementFileName, bucket);
@@ -142,15 +131,7 @@ public class DocUploadUtils {
 
             if (!ObjectUtils.isEmpty(signedKFSUrl)) {
                 String kfsLetterFileName = ESIGNED_KFS_S3_KEY_PREFIX + applicationId;
-
-                URL url = new URL(signedKFSUrl);
-                HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
-                connection.setConnectTimeout(20000); // 10 seconds
-                connection.setReadTimeout(30000);    // 20 seconds
-                connection.setHostnameVerifier((hostname, session) -> true);
-                InputStream inputStream = connection.getInputStream();
-
-                //InputStream inputStream = URI.create(signedKFSUrl).toURL().openConnection().getInputStream();
+                InputStream inputStream = URI.create(signedKFSUrl).toURL().openConnection().getInputStream();
                 log.info("inputStream: {}",inputStream);
                 s3BucketHandler.uploadToS3PdfBucket(inputStream, kfsLetterFileName, bucket);
                 String kfsUrl = s3BucketHandler.getPreSignedPublicURL(kfsLetterFileName, bucket);
